# bte-blueprint

./: .gitignore  Cargo.toml  blueprint.json  deploy-contract.sh  deployed_address.txt  foundry.toml  remappings.txt  rpc_url.txt  setup-testnet.sh  stop-testnet.sh
contracts/cache/: solidity-files-cache.json
contracts/src/: BlsBlueprint.sol  BteBlueprint.sol  SecureStorage.sol
keystores/bob/b12c2f69-8b80-42fa-a71a-fa297d223c4f/: test_started.tmp
src/: bte.rs  bte_state_machine.rs  context.rs  elliptic_ark_bls.rs  hasher.rs  keygen.rs  keygen_state_machine.rs  lib.rs  main.rs  signing.rs  signing_state_machine.rs  state_machine.rs
tests/: bls.rs  bte.rs
