[package]
name = "bls-blueprint"
version = "0.1.1"
description = "A BLS Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "BlsBlueprint" }

[dependencies]
gadget-sdk = { git = "https://github.com/tangle-network/gadget.git", features = ["std"] }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
hex = { version = "0.4.3", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
round-based = { version = "0.3.2", features = ["runtime-tokio"] }
thiserror = "2.0.3"
itertools = "0.13.0"

# MPC specific deps
bls12_381_plus = { version = "0.8.18", features = ["ark", "expose-fields"] }
snowbridge-milagro-bls = "1.5.4"
gennaro-dkg = { version = "0.8.0", features = ["curve25519"] }

# batch threshold deps
batch-threshold = { git = "https://github.com/guruvamsi-policharla/batched-threshold-pp", rev = "974749c4d337fae4b5c4f741c62e680f83e6503a" }
ark-poly = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace", "std"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }

ff = { version = "0.13" }
group = { version = "0.13" }
num-bigint = { version = "0.4" }
sha3 = { version = "0.10.8" }

[build-dependencies]
blueprint-metadata = { git = "https://github.com/tangle-network/gadget.git" }

[dev-dependencies]
blueprint-test-utils = { git = "https://github.com/tangle-network/gadget.git" }
tokio = { version = "1.42.0", features = ["test-util"] }

[features]
default = ["std"]
std = []
